# set_spec

./: CMakeLists.txt  Rand.hpp  cunits.hpp  main.cpp  specSet.hpp  specVec.hpp
test/: CMakeLists.txt
test/set/: CMakeLists.txt  specSetTest.cpp
test/vec/: CMakeLists.txt  specVecTest.cpp
